Stopping power calculation (#122)
* Adding .dat files support and stp calculation

* add Tracefactory.js

* ignore .data output file

* set target  to libdedx@master:latest commit

* use cwrap instead of ccall

* Add .data file to the workflow

* change artifact name

* changing artifact name

* split artifact public

* file format fix

* update script

* debugging

* remove data artifact

* fix name

* cleanup and debugging

* Memory acces out of bounds fix

* Changes propsed in review

* replacement bug fix

* renaming file as per the new standard

* Further renaming bugfixes

* Update JSRootGraph.test.js

* Changes from PR review

* variable name fix

* Apply suggestions from code review


* Refactoring requested in review

* Fix tests

* Update src/Backend/DataSeriesFactory.js

--- a/src/Styles/Toggle.css
+++ b/src/Styles/Toggle.css
@@ -22,6 +22,8 @@
     padding: 0.2rem;
     cursor: pointer;
     min-width: 4rem !important;
+    max-height: 24px;
+    overflow: hidden;
     flex: 1 1 100%;
     font-weight: bold;
     transition: 0.2s background, 0.2s color ease-in-out;
